# Techna

./: .env.example  .gitignore  LICENSE  app.json  docker-compose.yaml  go.mod  metro.config.js  package-lock.json  package.json
backend/: Dockerfile
backend/auth/: Dockerfile  go.mod  go.sum
backend/auth/cmd/app/: main.go
backend/auth/db/: init.sql
backend/auth/internal/app/config/: config.go
backend/auth/internal/app/database/: engine.go
backend/auth/internal/dto/: accessDto.go  authDto.go  employeeDto.go  refreshTokenDto.go
backend/bot/: Dockerfile  constants.py  main.py  pyproject.toml  requirements.txt  s3.py
backend/bot/api/embeddings/: processor.py
backend/bot/api/llm/: processor.py
backend/bot/config/: config.py
backend/bot/formatters/: __init__.py  text.py
backend/bot/handlers/: __init__.py  websocket.py
backend/bot/models/: __init__.py  file.py
backend/bot/qdrant/: engine.py
backend/cmd/app/: main.go
src/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx  login.tsx
src/app/(portal)/: _layout.tsx  benefits.tsx  career.tsx  chat.tsx  contacts.tsx  home.tsx  learning.tsx  links.tsx  store.tsx  thanks.tsx
src/components/Chat/: ChatWindow.tsx  MessageBubble.tsx  TypingIndicator.tsx
src/components/HR/: QuickActions.tsx  SourceBlock.tsx  UserHeader.tsx
src/components/Portal/: HoverCard.tsx  MascotFab.tsx  PortalShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/UI/: Button.tsx  Input.tsx
src/services/: api.ts  auth.ts  chat.ts
src/store/: storage.ts  useChatStore.ts  useUserStore.ts
src/types/: chat.ts  user.ts
(+14 files in other folders)
