[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]
