[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "botocore>=1.42.97",
    "fastapi[standard]>=0.136.1",
    "fastembed>=0.8.0",
    "minio>=7.2.20",
    "numpy>=2.4.4",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "qdrant-client>=1.17.1",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
]
